# pySigma-pipeline-ossem

./: README.md  pyproject.toml
.github/workflows/: test.yml
sigma/pipelines/ossem/: __init__.py  ossem.py
tests/: test_pipelines_ossem.py
