[tool.poetry]
name = "pySigma-pipeline-ossem"
version = "0.1.0"
description = "pySigma OSSEM pipeline"
authors = ["Thomas Patzke <thomas@patzke.org>"]
license = "LGPL-3.0-only"
repository = "https://github.com/SigmaHQ/pySigma-pipeline-ossem"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
